# termid-x

./: .gitignore  CMakeLists.txt  README.md  makefile  termid-x
include/: account.h  engine.h  entity.cpp  entity.h  order.h  stock.cpp  stock.h  trade.h  utils.h
include/backend_engine/: account.h  account.hpp  engine.h  engine.hpp  entity.h  entity.hpp  order.h  order.hpp  trade.h  trade.hpp  utils.hpp
include/ui_engine/: order_book.hpp
src/: account.cpp  app.cpp  engine.cpp  entity.cpp  main.cpp  stock.cpp
src/backend_engine/: account.cpp  engine.cpp  entity.cpp
src/ui_engine/: app.cpp  order_book.cpp
